# osprey

./: .deslop.toml  .dockerignore  .gitignore  CLAUDE.md  COLLECTIONS_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  Cargo.toml  Makefile  PR_DESCRIPTION.md  README.md  clippy.toml  coverage-thresholds.json  deslop-report.html  deslop-report.json  deslop-report.txt  osprey-x64.code-workspace  osprey.code-workspace  rustfmt.toml  shipwright.json  test_output.txt
.claude/: settings.json  settings.local.json
.cursor/rules/: core-principles.mdc
.devcontainer/: Dockerfile  README.md  build-compiler.sh  devcontainer-amd64.json  devcontainer-arm64.json  devcontainer.json  docker-compose.yml  post-create.sh  setup-all.sh  setup-vscode-extension.sh  start-dev-container.sh  startup.sh  switch-arch.sh  test-setup.sh
.github/: release-scope.json
.github/workflows/: ci-windows.yml  ci.yml  deploy-pages.yml  deploy-webcompiler.yml  release-change-detection.yml  release-vsix.yml  release.yml
benchmarks/: README.md  report.py  run.sh
benchmarks/results/: raw.jsonl  results.html  results.json  results.md
compiler/: .cursorrules  .gitignore  .golangci.yml  CLAUDE.md  EFFECT_SYSTEM_DEBUG_PLAN.md  FIBER_NONDETERMINISM_BUG.md  HINDLEY_MILNER_FIX_PLAN.md  HINDLEY_MILNER_TYPE_SYSTEM_FIXES.md  Makefile  NEXT_FIXES.md  PARSER_TOKENIZATION_ISSUE.md  REMAINING_COMPILER_FIXES_PLAN.md  algebraic_effects_comprehensive.osp  compilersbestpractice.md  coverage_plan.md  coverage_report.sh  coverageplan.md  ctests.md  exclude-from-code-coverage.sh  go.mod  go.sum  osprey.g4  param_test.osp  plan.md  readme.md  scoping.md  spec.md  test_polymorphic_apply.osp  traitsandeffects.md
compiler/.claude/: settings.local.json
compiler/examples/: .cursorrules
compiler/parser/: osprey.interp  osprey.tokens  ospreyLexer.interp  ospreyLexer.tokens  osprey_base_listener.go  osprey_lexer.go  osprey_listener.go  osprey_parser.go
compiler/runtime/: .gitignore  bridge_stubs.c  collection_runtime.h  collection_tests.c  effects_runtime.c  ffi_runtime.c  fiber_runtime.c  fiber_runtime_test  fiber_runtime_tests.c  http_client_runtime.c  http_runtime_tests.c  http_server_runtime.c  http_shared.c  http_shared.h  json_runtime.c  list_runtime.c  list_tests.c  map_runtime.c  map_runtime_hamt.c  map_runtime_internal.h  map_tests.c  memory_gc.c  memory_runtime.c  osp_gc_shim.h  osprey_win_compat.h  random_runtime.c  run_tests.sh  string_runtime.c  string_runtime.h  string_runtime_list.c  string_runtime_tests.c  system_runtime.c  term_runtime.c  test_cmake_integration.sh  test_fiber_runtime_unity.c  test_http_length_validation.c  test_system_runtime  test_system_runtime.c  test_system_runtime_unity.c  test_websocket_runtime.c  (+3 more)
compiler/spec/: 0001 - Introduction.md  0001-Introduction.md  0002 - Lexical Structure  0002-LexicalStructure.md  0003 - Syntax.md  0003-Syntax.md  0004 - Semantics.md  0004-Semantics.md  0004-TypeSystem.md  0005 - Type System.md  0005-FunctionCalls.md  0005-TypeSystem.md  0006 - Function Calls.md  0006-FunctionCalls.md  0006-StringInterpolation.md  0007 - String Interpolation.md  0007-PatternMatching.md  0007-StringInterpolation.md  0008 - Pattern Matching.md  0008-BlockExpressions.md  0008-PatternMatching.md  0009 - Block Expressions.md  0009-BlockExpressions.md  0009-BooleanOperations.md  0013-ErrorHandling.md  (+34 more)
crates/: diff_examples.sh  diff_wasm_examples.sh
crates/osprey-cli/: Cargo.toml
crates/osprey-cli/src/: docs.rs  fmt.rs  lsp.rs  main.rs  sandbox.rs  wasm.rs
crates/osprey-cli/tests/: cli_e2e.rs  cross_flavor_equiv.rs  cross_flavor_ir_equiv.rs  examples_compile.rs  examples_golden.rs  no_needless_main.rs
crates/osprey-codegen/: Cargo.toml
crates/osprey-codegen/src/: aggregate.rs  builder.rs  call.rs  cast.rs  closure.rs  collections.rs  conv.rs  effects.rs  error.rs  expr.rs  extern_call.rs  fiber.rs  freevars.rs  genfn.rs  iter.rs  lib.rs  listlit.rs  llty.rs  loops.rs  lower.rs  pattern.rs  result.rs  runtime.rs  strings.rs  types.rs
crates/osprey-fmt/: Cargo.toml
crates/osprey-fmt/src/: brace.rs  layout.rs  lib.rs  scan.rs
crates/osprey-fmt/tests/: corpus.rs
crates/osprey-runtime-sys/: Cargo.toml  build.rs
crates/osprey-runtime-sys/src/: lib.rs
crates/osprey-syntax/: Cargo.toml
crates/osprey-syntax/src/: expr.rs  lib.rs  lower.rs  strings.rs
crates/osprey-syntax/src/default/: expr.rs  lower.rs  mod.rs
crates/osprey-syntax/src/ml/: cst.rs  lexer.rs  lower.rs  mod.rs  parser.rs  token.rs
crates/osprey-syntax/tests/: ml_coverage.rs
crates/osprey-types/: Cargo.toml
crates/osprey-types/src/: builtin_docs.rs  builtin_docs_lang.rs  builtin_docs_sys.rs  builtins.rs  check.rs  convert.rs  ctx.rs  env.rs  error.rs  expr.rs  info.rs  lib.rs  pattern.rs  testutil.rs  ty.rs  unify.rs
docs/: RELEASING.md  multitarget-js-dotnet.md
examples/: README.md
homebrew-package/: build-release.sh  create-release.sh  osprey-local.rb  osprey.rb  readme.md  setup-tap.sh
schemas/: shipwright.schema.json
scratchpad/: add_ml_twins.py  pw_verify.js  spec-redo-workflow.js
scripts/: install-deslop.sh  wasm-browser-smoke.mjs  wasm-smoke.mjs
tree-sitter-osprey/: Cargo.toml  build.rs  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-osprey/bindings/rust/: lib.rs
tree-sitter-osprey/queries/: folds.scm  highlights.scm  locals.scm
tree-sitter-osprey/src/: grammar.json  node-types.json  parser.c
tree-sitter-osprey/test/: parse-all.js
tree-sitter-osprey/test/corpus/: osprey.txt
vscode-extension/: .c8rc.json  .gitignore  .vscode-test.js  .vscodeignore  FEATURES.md  README.md  TESTING.md  build.sh  language-configuration-ml.json  package-lock.json  package.json  run-tests.sh  shipwright.json  test-runner.js  tsconfig.json
webcompiler/: DEPLOYMENT.md  Dockerfile  README.md  config.sh  deploy-apprunner.sh  deploy-ecr.sh  deploy.sh  docker-compose.yml  fly.toml  package-lock.json  package.json  start-dev.sh  start.sh  test.osp  test.sh
website/: .eleventy.js  .gitignore  deploy.sh  eleventy.config.mjs  package-lock.json  package.json  playwright.config.js
(+1112 files in other folders)
