# Cargo workspace for the Osprey compiler's Go -> Rust migration.
# docs/plans/go-to-rust-migration.md. Small crates keep incremental builds fast
# (no single crate over ~5K LOC; LLVM stays out of the build — IR is emitted as
# text and handed to clang, exactly as the Go compiler does today).
[workspace]
resolver = "2"
members = [
    "tree-sitter-osprey",
    "crates/osprey-ast",
    "crates/osprey-syntax",
    "crates/osprey-types",
    "crates/osprey-codegen",
    "crates/osprey-runtime-sys",
    "crates/osprey-cli",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2021"
license = "MIT"
repository = "https://github.com/MelbourneDeveloper/osprey"

[workspace.dependencies]
tree-sitter = "0.24"
tree-sitter-language = "0.1"
osprey-ast = { path = "crates/osprey-ast" }
osprey-syntax = { path = "crates/osprey-syntax" }
osprey-types = { path = "crates/osprey-types" }
osprey-codegen = { path = "crates/osprey-codegen" }
tree-sitter-osprey = { path = "tree-sitter-osprey" }
