[package]
name = "tree-sitter-osprey"
description = "Osprey grammar for tree-sitter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "build.rs"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { workspace = true }

[dev-dependencies]
tree-sitter = { workspace = true }

[build-dependencies]
cc = "1"
