[package]
name = "tree-sitter-osprey"
description = "Osprey grammar for tree-sitter"
# SEALED UNSAFE BOUNDARY (see osprey-runtime-sys). Vendored tree-sitter grammar
# bindings need `unsafe` for `LanguageFn::from_raw`, so this crate does NOT
# inherit the workspace's `unsafe_code = "deny"` lints.
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "build.rs"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { workspace = true }

[dev-dependencies]
tree-sitter = { workspace = true }

[build-dependencies]
cc = "1"
