[package]
name = "osprey-runtime-sys"
description = "FFI bindings to the existing Osprey C runtime (compiler/runtime/*.c), built with cc — no C is rewritten"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "osprey_runtime_ffi"

# SEALED UNSAFE BOUNDARY. This crate and `tree-sitter-osprey` are the ONLY places
# `unsafe` is permitted — all FFI is quarantined here so the rest of the workspace
# keeps `unsafe_code = "deny"`. It therefore does NOT inherit `[workspace.lints]`
# (which would forbid the `extern "C"` blocks it exists to declare). Keep this
# crate a thin, audited shim; put real logic in the safe crates.

[build-dependencies]
cc = "1"
